--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,6 +5,7 @@
 :root {
   /*========== Colors ==========*/
   --title-color: #fff;
+  --text-title: hsl(0, 0%, 0%);
   --text-color: hsl(231, 89%, 65%);
   --shape-gradient: linear-gradient(90deg, 
                     hsl(300, 76%, 60%),
@@ -30,6 +31,10 @@
 body {
   font-family: var(--body-font);
   color: var(--text-color);
+}
+
+html{
+  scroll-behavior: smooth;
 }
 
 img {
@@ -73,13 +78,17 @@ img {
 }
 .profile__name {
   font-weight: 900;
-  font-size: var(--h2-font-size);
+  font-size: var(--biggest-font-size);
+  color: var(--text-title);
 }
 .profile__profession {
   font-size: var(--smaller-font-size);
   font-weight: 500;
-  color: var(--text-color);
+  color: var(--text-title);
   margin-bottom: 1rem;
+}
+.profil__yt{
+  padding-top: .7rem;
 }
 .profile__social {
   display: flex;
@@ -87,9 +96,22 @@ img {
   column-gap: 0.75rem;
 }
 .profile__social-link {
-  font-size: 1.75rem;
-  color: var(--title-color);
+  font-size: 1rem;
+  color: var(--text-title);
   transition: 0.3s;
+  place-items: center;
+}
+.profile__ig{
+  display: flex;
+  justify-content: center;
+  column-gap: 2rem;
+  padding-bottom: .5rem;
+}
+.profile__social-link_yt{
+  font-size: 2rem;
+  color: var(--text-title);
+  transition: 0.3s;
+  place-items: center;
 }
 .profile__social-link:hover {
   color: var(--first-color);
